Fix footer social links not showing

--- a/public/wp-content/themes/wild-and-without/css/components/header.scss
+++ b/public/wp-content/themes/wild-and-without/css/components/header.scss
@@ -67,6 +67,10 @@ body.header-fixed .social_links_wrap_fixed {
   display: block;
 }
 
+.footer_social_links_wrap.social_links_wrap {
+  display: block !important;
+}
+
 body.header-fixed .header_wrap .header_container {
   text-align: left;
 }
